tests/compile_fail/lit_factory_removed.cpp
#include <ptn/patternia.hpp>

int main() {
  auto v = ptn::lit<1>();
  (void)v;
  return 0;
}
